feat: serve static files from the uploads folder