@@ -1,6 +1,6 @@
 package com.example.CollegeBackend.config;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
@@ -10,7 +10,6 @@ import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import com.example.CollegeBackend.middleware.AuthenticationFilter;
 
-import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 
 import org.springframework.lang.NonNull;
@@ -23,12 +22,22 @@ public class Config {
         FilterRegistrationBean<AuthenticationFilter> registrationBean = new FilterRegistrationBean<>();
         registrationBean.setFilter(new AuthenticationFilter());
         registrationBean.addUrlPatterns("/api/v1/*");
-        registrationBean.setUrlPatterns(Arrays.asList("/api/v1/*"));
+        registrationBean.setUrlPatterns(List.of("/api/v1/*"));
         registrationBean.setFilter(new AuthenticationFilter() {
             @Override
-            protected boolean shouldNotFilter(@NonNull HttpServletRequest request) throws ServletException {
+            protected boolean shouldNotFilter(@NonNull HttpServletRequest request) {
                 String path = request.getRequestURI();
-                return path.startsWith("/api/v1/auth/signin") || path.startsWith("/api/v1/auth/signup");
+                String[] excludeUrls = {
+                        "/api/v1/auth/signin",
+                        "/api/v1/auth/signup",
+                        "/api/v1/assignments/uploads"
+                };
+                for (String url : excludeUrls) {
+                    if (path.startsWith(url)) {
+                        return true;
+                    }
+                }
+                return false;
             }
         });
         return registrationBean;
